# k8s-rs-pb

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
k8s-rs-pb/: Cargo.toml  README.md
k8s-rs-pb/src/: lib.rs
k8s-rs-pb/src/api/: mod.rs
k8s-rs-pb/src/api/admission/v1/: mod.rs
k8s-rs-pb/src/api/admission/v1beta1/: mod.rs
k8s-rs-pb/src/api/admissionregistration/v1/: mod.rs
k8s-rs-pb/src/api/admissionregistration/v1alpha1/: mod.rs
k8s-rs-pb/src/api/admissionregistration/v1beta1/: mod.rs
k8s-rs-pb/src/api/apidiscovery/: mod.rs
k8s-rs-pb/src/api/apidiscovery/v2/: mod.rs
k8s-rs-pb/src/api/apidiscovery/v2beta1/: mod.rs
k8s-rs-pb/src/api/apiserverinternal/v1alpha1/: mod.rs
k8s-rs-pb/src/api/apps/: mod.rs
k8s-rs-pb/src/api/apps/v1/: mod.rs
k8s-rs-pb/src/api/apps/v1beta1/: mod.rs
k8s-rs-pb/src/api/apps/v1beta2/: mod.rs
k8s-rs-pb/src/api/authentication/: mod.rs
k8s-rs-pb/src/api/authentication/v1/: mod.rs
k8s-rs-pb/src/api/authentication/v1alpha1/: mod.rs
k8s-rs-pb/src/api/authentication/v1beta1/: mod.rs
k8s-rs-pb/src/api/authorization/v1/: mod.rs
k8s-rs-pb/src/api/authorization/v1beta1/: mod.rs
k8s-rs-pb/src/api/autoscaling/: mod.rs
k8s-rs-pb/src/api/autoscaling/v1/: mod.rs
k8s-rs-pb/src/api/autoscaling/v2/: mod.rs
k8s-rs-pb/src/api/autoscaling/v2beta1/: mod.rs
k8s-rs-pb/src/api/autoscaling/v2beta2/: mod.rs
k8s-rs-pb/src/api/batch/v1/: mod.rs
k8s-rs-pb/src/api/batch/v1beta1/: mod.rs
k8s-rs-pb/src/api/certificates/v1/: mod.rs
k8s-rs-pb/src/api/certificates/v1alpha1/: mod.rs
k8s-rs-pb/src/api/certificates/v1beta1/: mod.rs
k8s-rs-pb/src/api/coordination/v1/: mod.rs
k8s-rs-pb/src/api/coordination/v1beta1/: mod.rs
k8s-rs-pb/src/api/core/v1/: mod.rs
k8s-rs-pb/src/api/discovery/v1/: mod.rs
k8s-rs-pb/src/api/discovery/v1beta1/: mod.rs
k8s-rs-pb/src/api/events/v1/: mod.rs
k8s-rs-pb/src/api/events/v1beta1/: mod.rs
k8s-rs-pb/src/api/extensions/v1beta1/: mod.rs
k8s-rs-pb/src/api/flowcontrol/: mod.rs
k8s-rs-pb/src/api/flowcontrol/v1/: mod.rs
k8s-rs-pb/src/api/flowcontrol/v1beta1/: mod.rs
k8s-rs-pb/src/api/flowcontrol/v1beta2/: mod.rs
k8s-rs-pb/src/api/flowcontrol/v1beta3/: mod.rs
k8s-rs-pb/src/api/networking/: mod.rs
k8s-rs-pb/src/api/rbac/: mod.rs
k8s-rs-pb/src/apimachinery/pkg/: mod.rs
k8s-rs-pb/src/v1_30/: mod.rs
k8s-rs-pb/src/v1_31/: extension.rs  mod.rs
k8s-rs-pb/src/v1_32/: mod.rs
k8s-rs-pb/src/v1_32/api/: mod.rs
k8s-rs-pb/src/v1_33/: mod.rs
k8s-rs-pb/testdata/: deploy.json  etcd_metrics.json  node_metrics.json
(+353 files in other folders)
