[package]
name = "k8s-rs-pb"
version = "0.2.0"
authors = ["Dmitriy Mastitskiy <dimulgator@outlook.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/DMoscicki/k8s-rs-pb/"
repository = "https://github.com/DMoscicki/k8s-rs-pb/"
documentation = "https://github.com/DMoscicki/k8s-rs-pb/blob/master/README.md"
description = "Converter from k8s-openapi to rust-protobuf"
publish = true

[dependencies]
protobuf = "3.7.2"
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"  
chrono = "0.4.38"
k8s-openapi = { version = "0.24.0", features = ["latest"] }

[dev-dependencies]
kube = {version = "0.99.0", features = ["client"]}