[package]
name = "k8s-rs-pb"
version = "0.3.0"
authors = ["Dmitriy Mastitskiy <dimulgator@outlook.com>"]
edition = "2021"
categories = ["api-bindings", "kubernetes", "k8s", "web"]
license = "MIT"
homepage = "https://github.com/DMoscicki/k8s-rs-pb/"
repository = "https://github.com/DMoscicki/k8s-rs-pb/"
documentation = "https://github.com/DMoscicki/k8s-rs-pb/blob/v0.3.0/README.md"
description = "Bindings from k8s-openapi to rust-protobuf which support application/vnd.kubernetes.protobuf"
publish = true

[dependencies]
cfg-if = "1"
protobuf = "3.7.2"
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"  
chrono = "0.4"

[dev-dependencies]
kube = {version = "0.99.0", features = ["client"]}
k8s-openapi = { version = "0.24.0", features = ["latest"] }

[features]
earliest = ["v1_30"]
v1_30 = []
v1_31 = []
v1_32 = []
v1_33 = []
latest = ["v1_33"]